@@ -1,5 +1,6 @@
 2021-10-04 Danilo Chang
 
+	* Update TrainData command
 	* Implement command: sortIdx, repeat
 
 2021-10-03 Danilo Chang
